Android should return BCP47 tag, not localized string